# parallel-computing-labs-2020

./: .gitignore
lab2/: CMakeLists.txt  build-gcc.sh  lab2  lab2.c  results-2.csv  results.csv  test-1-6.sh  test-8-24.sh  test-onlyN2-1-6.sh  test-onlyN2-8-24.sh  test-onlyN3-8-24.sh
lab3/: CMakeLists.txt  build-gcc-noopenmp.sh  build-gcc.sh  lab3.c  results-noscheduling.csv  results-nz2-noscheduling.csv  results-nz2-scheduling-dynamic-20.csv  results-nz2-scheduling-guided-20.csv  results-nz2-scheduling-static-20.csv  results-scheduling-dynamic-10000.csv  results-scheduling-dynamic-2.csv  results-scheduling-dynamic-20.csv  results-scheduling-dynamic-200.csv  results-scheduling-dynamic-2000.csv  results-scheduling-dynamic-5000.csv  results-scheduling-guided-10000.csv  results-scheduling-guided-2.csv  results-scheduling-guided-20.csv  results-scheduling-guided-200.csv  results-scheduling-guided-2000.csv  results-scheduling-guided-5000.csv  results-scheduling-static-10000.csv  results-scheduling-static-2.csv  results-scheduling-static-20.csv  results-scheduling-static-200.csv  results-scheduling-static-2000.csv  results-scheduling-static-5000.csv  test-noscheduling.sh  test-nz2-nosched.sh  test-nz2-sched.sh  test-scheduling.sh
lab3.5/: CMakeLists.txt  build-gcc-noopenmp.sh  build-gcc.sh  lab3.5.c  lab35nomp  lab35omp
lab4/: CMakeLists.txt  build-gcc-noopenmp.sh  build-gcc.sh  find_Nx.sh  lab4.c  lab4nomp  lab4omp  results-allsteps-Generate.csv  results-allsteps-Map.csv  results-allsteps-Merge.csv  results-allsteps-Reduce.csv  results-allsteps-Sort.csv  results-allsteps-total.csv  results-default.csv  results-findNx.csv  results-smalli-1.csv  results-smalli-2.csv  results-smalli-3.csv  results-smalli-4.csv  results-smalli-5.csv  results-smalli-6.csv  test-allsteps.sh  test-default.sh  test-smalli.sh
lab6/: CMakeLists.txt  a.out  cltest.sh  kernel.cl  lab6  lab6.c  lab62.c  stage_merge.cl  test.c  (+10 more)
(+164 files in other folders)
